# G4Plugin

./: G4Plugin.hh  README.markdown
example/: CMakeLists.txt  plugin_example.cc
example/include/: DetectorConstruction.hh  PhysicsList.hh  PrimaryGeneratorAction.hh
example/macros/: vis.mac
example/plugin/: CMakeLists.txt  plugin.cc
example/src/: DetectorConstruction.cc  PhysicsList.cc  PrimaryGeneratorAction.cc
